# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.22 2007-10-24 16:23:41 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.4 (????/??/??)
 - (2007/10/24) Fixed bug# 2289 - compress with bzip2 dont works in backup.pl.
 - (2007/10/22) Fixed bug# 2421 - If customer cache backend is used, sometimes
    "Need Value" appears in the log file.
 - (2007/10/19) Fixed bug# 1203 - Changed Redhat shm workaround to use a fixed
    IPCKey per instance, but prevent clash with IPCKey of other instances.
 - (2007/10/19) Fixed bug# 2263 - Problems with array refs and escaping
 - (2007/10/18) Fixed bug# 2410 - $/ as given is currently unsupported at
    Kernel/cpan-lib/MIME/Decoder/NBit.pm line 140
 - (2007/10/17) Fixed bug# 2404 - Wrong results if you use StatsTypeID as
    TicketSearch attribute.
 - (2007/10/17) Fixed bug# 2407 - Performance handicap because of a missing
    'if'-attribute.
 - (2007/10/16) Improved performance of module by reduce calls of
    $Self->{ConfigObject}->Get() in Kernel/Output/HTML/Layout.pm and
    Kernel/System/Encode.pm.
 - (2007/10/16) Fixed bug# 2404 - Problems with the time extended feature in
    stats module.
 - (2007/10/15) Fixed bug# 2398 - Translate the stats output.
 - (2007/10/12) Fixed bug# 2388 - Show the radio button of static stats files.
 - (2007/10/10) Fixed bug# 2383 - IntroInstallPre in .opm files is not working
    on installing via online repository.
 - (2007/10/10) Fixed bug# 2380 - Ignore HTMLQuote param in Layout object
    function _BuildSelectionOptionRefCreate.
 - (2007/10/09) Fixed bug# 2375 - Possible race condition in generic agent
    jobs (during processing jobs). Generic agent job attributes can get
    lost.